Add DelegateOrg findById